# docs/swagger.json
@@ -3461,10 +3461,6 @@
                     "description": "Флаг о возможности редактировать всю информацию",
                     "type": "boolean"
                 },
-                "department": {
-                    "description": "Кафедра",
-                    "type": "string"
-                },
                 "full_name": {
                     "description": "Полное имя",
                     "type": "string"
@@ -3723,9 +3719,6 @@
                 "actual_semester": {
                     "type": "integer"
                 },
-                "department": {
-                    "type": "string"
-                },
                 "full_name": {
                     "type": "string"
                 },
@@ -3736,6 +3729,7 @@
                     "type": "integer"
                 },
                 "specialization_id": {
+                    "description": "Department       string     `json:\"department,omitempty\"`",
                     "type": "integer"
                 },
                 "start_date": {
